# WES

./: .env.example  .gitignore  AUTODELIVERY_PROOF.md  CHANGELOG.md  LICENSE  P0B_APP_PROOF.md  P0_PUSH_PROOF.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_initial_company_engine.py  0002_auth_fields.py  0003_ai_company_core.py  0004_work_management.py  0005_ai_execution_engine.py  0006_ai_orchestration_engine.py  0007_organizational_knowledge_engine.py  0008_live_provider_platform.py  0009_repository_intelligence.py  0010_autonomous_development.py  0011_quality_gate_engine.py  0012_enterprise_devops.py  0013_dev_modification_spec.py  0014_plan_requirements.py  0015_project_intake.py  0016_durable_jobs.py  0017_ai_orchestration.py  0018_notifications.py  0019_security_hardening.py  0020_agent_memory.py  0021_self_learning.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  rate_limit.py  responses.py  secrets.py
backend/app/db/: init.py  seed.py  seed_ai.py  seed_devops.py  seed_execution.py  seed_knowledge.py  seed_orchestration.py  seed_quality.py  seed_repository.py  seed_work.py
backend/app/domain/: ai_enums.py  development_enums.py  devops_enums.py  enums.py  execution_enums.py  knowledge_enums.py  orchestration_enums.py  quality_enums.py  repository_enums.py  roles.py  work_enums.py
backend/app/models/: __init__.py  ai.py  base.py  company.py  department.py  development.py  devops.py  employee.py  execution.py  jobs.py  knowledge.py  learning.py  memory.py  notifications.py  orchestration.py  provider_platform.py  quality.py  repository.py  security.py  work.py
backend/app/providers/: __init__.py  base.py  external.py  (+3 more)
backend/tests/: conftest.py
wes-app/backend/: .env.example  Dockerfile  README.md  pyproject.toml
(+535 files in other folders)
