[project]
name = "wes-company-engine"
version = "0.2.0"
description = "WES OS — Core Company Engine (Company, Departments, Employees)"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
# black owns line length; migrations mirror upstream style.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/*" = ["F401", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
