[project]
name = "wes-backend"
version = "0.1.0"
description = "WES Web Application — backend API (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.30,<0.31",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "psycopg[binary]>=3.2,<3.3",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<0.28",
    "ruff>=0.5,<0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
